[tool.poetry]
name = "article-parser-service"
version = "0.1.0"
description = "Article Parser service"
authors = ["Dong Nguyen <ndaidong@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7 || ^3.8"
starlette = "^0.13.3"
uvicorn = "^0.11.3"
aiohttp = "^3.6.2"
arrow = "^0.15.6"
newspaper3k = "^0.2.8"

[tool.poetry.dev-dependencies]
safety = "^1.9.0"
pytest = "^5.4.1"
coveralls = "^2.0.0"
flake8 = "^3.7.9"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
