[tool.poetry]
name = "article-parser-service"
version = "0.1.0"
description = "Article Parser service"
authors = ["Dong Nguyen <ndaidong@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7 || ^3.8 || ^3.9 || ^3.10"
starlette = "^0.17.1"
uvicorn = "^0.15.0"
aiohttp = "^3.8.1"
arrow = "^1.2.1"
trafilatura = "^0.9.3"

[tool.poetry.dev-dependencies]
safety = "^1.10.3"
pytest = "^5.4.3"
coveralls = "^2.2.0"
flake8 = "^3.9.2"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
