[tool.poetry]
name = "feed-service"
version = "0.1.0"
description = "Feed Service"
authors = ["Dong Nguyen <ndaidong@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7 || ^3.8"
starlette = "^0.13.3"
uvicorn = "^0.11.3"
feedparser = "^5.2.1"
aiohttp = "^3.6.2"
arrow = "^0.15.6"

[tool.poetry.dev-dependencies]
safety = "^1.9.0"
pytest = "^5.4.1"
coveralls = "^2.0.0"
flake8 = "^3.7.9"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
